--- a/mysite/books/templates/books/search_form.html
+++ b/mysite/books/templates/books/search_form.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Search</title>
 </head>
 <body>
+    <form action="/books/search/" method ="get">
+        <input type="text" name ="q">
+        <input type="submit" value ="Search">
+    </form>
+
 
 </body>
 </html>
