--- a/mysite/books/templates/books/search_form.html
+++ b/mysite/books/templates/books/search_form.html
@@ -5,7 +5,7 @@
     <title>Search</title>
 </head>
 <body>
-    <form action="/books/search/" method ="get">
+    <form action="/books/search" method ="get">
         <input type="text" name ="q">
         <input type="submit" value ="Search">
     </form>
