--- a/mysite/books/templates/books/search_form.html
+++ b/mysite/books/templates/books/search_form.html
@@ -5,6 +5,10 @@
     <title>Search</title>
 </head>
 <body>
+    {% if error %}
+        <p style="color: red;">Please submit a search term.</p>
+    {% endif %}
+    <!--<form action="/books/search" method ="get">-->
     <form action="/books/search" method ="get">
         <input type="text" name ="q">
         <input type="submit" value ="Search">
